# Solid-Python-Guide

./: 1_single_responsibility_principle.py  README.md  pyproject.toml
